<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_list_view"
    tools:context="com.spenditure.presentation.Goals.GoalListViewActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="start">

        <TextView
            android:id="@+id/textview_goal_name"
            android:text="Goal 1"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_amount"
            android:text="$3.95"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/textview_category"
            android:text="Food"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_completion_date"
            android:text="Complete by:"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>